logs/picontrol.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Adafruit_GPIO'...
Listing './lib/python3.5/site-packages/Adafruit_GPIO-1.0.1.egg-info'...
Listing './lib/python3.5/site-packages/Adafruit_PN532'...
Listing './lib/python3.5/site-packages/Adafruit_PN532-1.2.1.egg-info'...
Listing './lib/python3.5/site-packages/Adafruit_PureIO'...
Listing './lib/python3.5/site-packages/Adafruit_PureIO-0.2.1.egg-info'...
Listing './lib/python3.5/site-packages/Flask-0.12.dist-info'...
Listing './lib/python3.5/site-packages/Flask_API-0.6.9.egg-info'...
Listing './lib/python3.5/site-packages/Flask_HTTPAuth-3.2.2.egg-info'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/RPi'...
Listing './lib/python3.5/site-packages/RPi/GPIO'...
Listing './lib/python3.5/site-packages/RPi.GPIO-0.6.3.egg-info'...
Listing './lib/python3.5/site-packages/Werkzeug-0.14.1.dist-info'...
Listing './lib/python3.5/site-packages/click'...
Listing './lib/python3.5/site-packages/click-6.7.dist-info'...
Listing './lib/python3.5/site-packages/flask'...
Listing './lib/python3.5/site-packages/flask/ext'...
Listing './lib/python3.5/site-packages/flask_api'...
Listing './lib/python3.5/site-packages/flask_api/static'...
Listing './lib/python3.5/site-packages/flask_api/static/css'...
Listing './lib/python3.5/site-packages/flask_api/static/img'...
Listing './lib/python3.5/site-packages/flask_api/static/js'...
Listing './lib/python3.5/site-packages/flask_api/templates'...
Listing './lib/python3.5/site-packages/flask_api/tests'...
Listing './lib/python3.5/site-packages/itsdangerous-0.24.egg-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/picontrol'...
Compiling './lib/python3.5/site-packages/picontrol/fan.py'...
***   File "./lib/python3.5/site-packages/picontrol/fan.py", line 29
    print 'unable to access config file'
                                       ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/picontrol/webserver'...
Listing './lib/python3.5/site-packages/picontrol/webserver/static'...
Listing './lib/python3.5/site-packages/picontrol/webserver/static/assets'...
Listing './lib/python3.5/site-packages/picontrol/webserver/static/assets/app'...
Listing './lib/python3.5/site-packages/picontrol/webserver/static/assets/app/alerts'...
Listing './lib/python3.5/site-packages/picontrol/webserver/static/assets/app/auth'...
Listing './lib/python3.5/site-packages/picontrol/webserver/static/assets/app/dashboard'...
Listing './lib/python3.5/site-packages/picontrol/webserver/static/assets/app/games'...
Listing './lib/python3.5/site-packages/picontrol/webserver/static/assets/app/games/modal'...
Listing './lib/python3.5/site-packages/picontrol/webserver/static/assets/app/login'...
Listing './lib/python3.5/site-packages/picontrol/webserver/static/assets/app/main'...
Listing './lib/python3.5/site-packages/picontrol/webserver/static/assets/app/nfc'...
Listing './lib/python3.5/site-packages/picontrol/webserver/static/assets/app/profile'...
Listing './lib/python3.5/site-packages/picontrol/webserver/static/assets/app/settings'...
Listing './lib/python3.5/site-packages/picontrol/webserver/static/assets/app/settings/modal'...
Listing './lib/python3.5/site-packages/picontrol/webserver/static/assets/css'...
Listing './lib/python3.5/site-packages/picontrol/webserver/static/assets/css/flags'...
Listing './lib/python3.5/site-packages/picontrol/webserver/static/assets/css/flags/1x1'...
Listing './lib/python3.5/site-packages/picontrol/webserver/static/assets/css/flags/4x3'...
Listing './lib/python3.5/site-packages/picontrol/webserver/static/assets/css/theme'...
Listing './lib/python3.5/site-packages/picontrol/webserver/static/assets/fonts'...
Listing './lib/python3.5/site-packages/picontrol/webserver/static/assets/images'...
Listing './lib/python3.5/site-packages/picontrol/webserver/static/assets/images/landing'...
Listing './lib/python3.5/site-packages/picontrol/webserver/static/assets/img'...
Listing './lib/python3.5/site-packages/picontrol/webserver/static/assets/js'...
Listing './lib/python3.5/site-packages/picontrol/webserver/templates'...
Listing './lib/python3.5/site-packages/picontrol-1.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/psutil'...
Listing './lib/python3.5/site-packages/psutil/tests'...
Listing './lib/python3.5/site-packages/psutil-5.2.1.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/spidev-3.2.egg-info'...
Listing './lib/python3.5/site-packages/tests'...
Listing './lib/python3.5/site-packages/werkzeug'...
Listing './lib/python3.5/site-packages/werkzeug/contrib'...
Listing './lib/python3.5/site-packages/werkzeug/debug'...
Listing './lib/python3.5/site-packages/werkzeug/debug/shared'...
Listing './picontrol'...
Listing './picontrol/picontrol'...
Listing './picontrol/picontrol/webserver'...
Listing './picontrol/picontrol/webserver/static'...
Listing './picontrol/picontrol/webserver/static/assets'...
Listing './picontrol/picontrol/webserver/static/assets/app'...
Listing './picontrol/picontrol/webserver/static/assets/app/alerts'...
Listing './picontrol/picontrol/webserver/static/assets/app/auth'...
Listing './picontrol/picontrol/webserver/static/assets/app/dashboard'...
Listing './picontrol/picontrol/webserver/static/assets/app/games'...
Listing './picontrol/picontrol/webserver/static/assets/app/games/modal'...
Listing './picontrol/picontrol/webserver/static/assets/app/login'...
Listing './picontrol/picontrol/webserver/static/assets/app/main'...
Listing './picontrol/picontrol/webserver/static/assets/app/nfc'...
Listing './picontrol/picontrol/webserver/static/assets/app/profile'...
Listing './picontrol/picontrol/webserver/static/assets/app/settings'...
Listing './picontrol/picontrol/webserver/static/assets/app/settings/modal'...
Listing './picontrol/picontrol/webserver/static/assets/css'...
Listing './picontrol/picontrol/webserver/static/assets/css/flags'...
Listing './picontrol/picontrol/webserver/static/assets/css/flags/1x1'...
Listing './picontrol/picontrol/webserver/static/assets/css/flags/4x3'...
Listing './picontrol/picontrol/webserver/static/assets/css/theme'...
Listing './picontrol/picontrol/webserver/static/assets/fonts'...
Listing './picontrol/picontrol/webserver/static/assets/images'...
Listing './picontrol/picontrol/webserver/static/assets/images/landing'...
Listing './picontrol/picontrol/webserver/static/assets/img'...
Listing './picontrol/picontrol/webserver/static/assets/js'...
Listing './picontrol/picontrol/webserver/templates'...
Listing './share'...
Listing './share/python-wheels'...
